--- a/client/styles/_vars.less
+++ b/client/styles/_vars.less
@@ -12,7 +12,9 @@
 @color-foreground: #222;
 @table-color-border: #bbb;
 @danger-color: #e11;
+
 @anchor-color-foreground: #2a92ea;
+@anchor-color-disabled: #888;
 
 @button-color-foreground: #fff;
 @button-color-background: #02121f;
