--- a/client/styles/core/components/table.less
+++ b/client/styles/core/components/table.less
@@ -50,11 +50,8 @@ table,
       font-weight: 600;
 
       &.disabled {
-        color: @button-color-foreground;
-
-        > .icon {
-          fill: @button-color-foreground;
-        }
+        color: @anchor-color-disabled;
+        fill: @anchor-color-disabled;
       }
 
       &.paginator-prev,
